Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21479

Galera 4 unable to query cluster state if not primary component

    XMLWordPrintable

Details

    Description

      select * from mysql.wsrep_cluster;
      ERROR 1047 (08S01): WSREP has not yet prepared node for application use
       
      select * from mysql.wsrep_cluster_members;
      ERROR 1047 (08S01): WSREP has not yet prepared node for application use
       
      select * from mysql.wsrep_streaming_log;
      Empty set (0.001 sec)
      

      For some reason, wsrep_streaming_log works (but is empty), but wsrep_cluster and wsrep_cluster_members both fail.

      For sysadmin purposes, it would be nice to have this information available

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            darkain Vincent Milum Jr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.